completed the weather retrieval process

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
     <div id="content">
       <div id="weather-summary">
-        <p id="high"></p>
-        <p id="low"></p>
-        <p id="rain"></p>
+        <p id="temp"></p>
+        <p id="precip"></p>
       </div>
       
       <div id="outfit">
