Styled images (poorly)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="title">
       <h1>NYC Weather Report</h1>
-      <h2>(And outfit picker!)</h2>
+      <h2>(And outfit recommendation!)</h2>
     </div>
 
     <div id="content">
